# web_hw_m6

./: LICENSE  README.md  main.py  pyproject.toml  university.db
db/: connect.py  create.py  insert.py  query.py
queries/: query_10.sql  query_2.sql  query_3.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql
