[tool.poetry]
name = "web-hw-m6"
version = "0.1.0"
description = ""
authors = ["Moses-93 <moieseenko2001@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
faker = "^28.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
